RESOLVED FIXED176292
FileSystemEntry API should ignore hidden files
https://bugs.webkit.org/show_bug.cgi?id=176292
Summary FileSystemEntry API should ignore hidden files
Chris Dumez
Reported 2017-09-02 22:53:57 PDT
FileSystemEntry API should ignore hidden files.
Attachments
Patch (12.15 KB, patch)
2017-09-05 10:49 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2017-09-05 09:36:06 PDT
Chris Dumez
Comment 2 2017-09-05 10:49:19 PDT
WebKit Commit Bot
Comment 3 2017-09-05 15:54:02 PDT
Comment on attachment 319914 [details] Patch Clearing flags on attachment: 319914 Committed r221639: <http://trac.webkit.org/changeset/221639>
WebKit Commit Bot
Comment 4 2017-09-05 15:54:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.